feat(memory): 添加长期记忆压缩功能
- 新增 CompressMemoryModal 组件实现压缩预览和确认界面
- 添加 MemoryCompressService 服务处理压缩逻辑和LLM调用
- 实现工具索引服务支持按用户嵌入模型进行语义搜索
- 更新.gitignore文件添加/target目录排除规则

--- a/.gitignore
+++ b/.gitignore
@@ -8314,3 +8314,4 @@
 /frontend/node_modules/yallist/README.md
 /frontend/node_modules/yallist/yallist.js
 /frontend/node_modules/.package-lock.json
+/target/
